--- a/GokiPoker/GokiPoker/CustomView/PlayerFieldCustomView.xib
+++ b/GokiPoker/GokiPoker/CustomView/PlayerFieldCustomView.xib
@@ -40,7 +40,7 @@
                     </constraints>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dh2-aX-cu7">
-                    <rect key="frame" x="24" y="28" width="164" height="21"/>
+                    <rect key="frame" x="24" y="28" width="164" height="133.5"/>
                     <accessibility key="accessibilityConfiguration">
                         <accessibilityTraits key="traits" keyboardKey="YES" staticText="YES"/>
                     </accessibility>
@@ -49,82 +49,103 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xgC-eO-nt3">
-                    <rect key="frame" x="188" y="28" width="164" height="21"/>
+                    <rect key="frame" x="188" y="28" width="164" height="133.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WX5-69-PdT">
-                    <rect key="frame" x="24" y="57" width="49" height="21"/>
+                    <rect key="frame" x="24" y="169.5" width="49" height="489.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1ti-6k-vdK">
-                    <rect key="frame" x="73" y="57" width="46" height="21"/>
+                    <rect key="frame" x="73" y="169.5" width="46" height="489.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uV8-sI-1xq">
-                    <rect key="frame" x="119" y="57" width="46" height="21"/>
+                    <rect key="frame" x="119" y="169.5" width="46" height="489.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lFU-Ht-bOd">
-                    <rect key="frame" x="165" y="57" width="46" height="21"/>
+                    <rect key="frame" x="165" y="169.5" width="46" height="489.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="boF-JJ-lx0">
-                    <rect key="frame" x="211" y="57" width="46" height="21"/>
+                    <rect key="frame" x="211" y="169.5" width="46" height="489.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="65Z-yB-wtp">
-                    <rect key="frame" x="257" y="57" width="46" height="21"/>
+                    <rect key="frame" x="257" y="169.5" width="46" height="489.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0He-p7-jS2">
-                    <rect key="frame" x="303" y="57" width="49" height="21"/>
+                    <rect key="frame" x="303" y="169.5" width="49" height="489.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="R3L-k1-N9o">
+                    <rect key="frame" x="0.0" y="0.0" width="0.0" height="667"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstAttribute="width" id="Wue-Ak-Yg8"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="65Z-yB-wtp" firstAttribute="top" secondItem="xgC-eO-nt3" secondAttribute="bottom" constant="8" id="0rP-TI-Ebx"/>
                 <constraint firstItem="lFU-Ht-bOd" firstAttribute="width" secondItem="3II-vM-4PB" secondAttribute="width" multiplier="0.14" id="1UX-iN-Kjx"/>
-                <constraint firstItem="uV8-sI-1xq" firstAttribute="top" secondItem="Dh2-aX-cu7" secondAttribute="bottom" constant="8" id="2DZ-CX-YT5"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="WX5-69-PdT" secondAttribute="bottom" constant="8" id="2TW-4X-95t"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="3II-vM-4PB" secondAttribute="trailing" constant="24" id="2nz-MD-ur0"/>
                 <constraint firstItem="Dh2-aX-cu7" firstAttribute="top" secondItem="3II-vM-4PB" secondAttribute="bottom" constant="8" id="5Mz-Tz-e0D"/>
+                <constraint firstItem="R3L-k1-N9o" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="7tP-Tb-HvR"/>
                 <constraint firstItem="65Z-yB-wtp" firstAttribute="leading" secondItem="boF-JJ-lx0" secondAttribute="trailing" id="8H0-Ky-o3M"/>
-                <constraint firstItem="1ti-6k-vdK" firstAttribute="leading" secondItem="WX5-69-PdT" secondAttribute="trailing" id="8zK-7n-FOg"/>
+                <constraint firstItem="1ti-6k-vdK" firstAttribute="leading" secondItem="WX5-69-PdT" secondAttribute="trailing" id="A4I-Ov-Bbj"/>
+                <constraint firstItem="65Z-yB-wtp" firstAttribute="bottom" secondItem="boF-JJ-lx0" secondAttribute="bottom" id="B7a-w1-R7v"/>
                 <constraint firstItem="WX5-69-PdT" firstAttribute="width" secondItem="3II-vM-4PB" secondAttribute="width" multiplier="0.15" id="BqD-MX-eYe"/>
                 <constraint firstItem="Dh2-aX-cu7" firstAttribute="leading" secondItem="3II-vM-4PB" secondAttribute="leading" id="Cw0-Y0-uOv"/>
                 <constraint firstItem="1ti-6k-vdK" firstAttribute="width" secondItem="3II-vM-4PB" secondAttribute="width" multiplier="0.14" id="E8e-da-rR8"/>
                 <constraint firstItem="boF-JJ-lx0" firstAttribute="leading" secondItem="lFU-Ht-bOd" secondAttribute="trailing" id="Ff7-Ys-l9J"/>
                 <constraint firstItem="xgC-eO-nt3" firstAttribute="leading" secondItem="Dh2-aX-cu7" secondAttribute="trailing" id="Kjl-XT-e1g"/>
+                <constraint firstItem="0He-p7-jS2" firstAttribute="top" secondItem="65Z-yB-wtp" secondAttribute="top" id="LCV-ta-Aw4"/>
                 <constraint firstItem="xgC-eO-nt3" firstAttribute="width" secondItem="Dh2-aX-cu7" secondAttribute="width" id="MgL-4s-32C"/>
+                <constraint firstItem="1ti-6k-vdK" firstAttribute="top" secondItem="WX5-69-PdT" secondAttribute="top" id="OCY-5w-R2C"/>
                 <constraint firstItem="0He-p7-jS2" firstAttribute="leading" secondItem="65Z-yB-wtp" secondAttribute="trailing" id="ODd-D7-1gm"/>
+                <constraint firstItem="0He-p7-jS2" firstAttribute="bottom" secondItem="65Z-yB-wtp" secondAttribute="bottom" id="OFP-nm-ZHN"/>
                 <constraint firstItem="Dh2-aX-cu7" firstAttribute="width" secondItem="3II-vM-4PB" secondAttribute="width" multiplier="0.5" id="SSV-So-gWF"/>
                 <constraint firstItem="WX5-69-PdT" firstAttribute="top" secondItem="Dh2-aX-cu7" secondAttribute="bottom" constant="8" id="USl-Eu-NQp"/>
                 <constraint firstItem="65Z-yB-wtp" firstAttribute="width" secondItem="3II-vM-4PB" secondAttribute="width" multiplier="0.14" id="VOj-K0-HCN"/>
                 <constraint firstItem="boF-JJ-lx0" firstAttribute="width" secondItem="3II-vM-4PB" secondAttribute="width" multiplier="0.14" id="WQa-qe-bWA"/>
+                <constraint firstItem="uV8-sI-1xq" firstAttribute="bottom" secondItem="1ti-6k-vdK" secondAttribute="bottom" id="ag7-1b-imQ"/>
                 <constraint firstItem="uV8-sI-1xq" firstAttribute="leading" secondItem="1ti-6k-vdK" secondAttribute="trailing" id="bzn-er-fjM"/>
+                <constraint firstItem="boF-JJ-lx0" firstAttribute="top" secondItem="lFU-Ht-bOd" secondAttribute="top" id="d9P-Jf-nIh"/>
                 <constraint firstItem="3II-vM-4PB" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="d9t-KK-LUC"/>
-                <constraint firstItem="1ti-6k-vdK" firstAttribute="top" secondItem="Dh2-aX-cu7" secondAttribute="bottom" constant="8" id="iKe-ft-xFr"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="R3L-k1-N9o" secondAttribute="bottom" id="e5z-Hf-DYU"/>
+                <constraint firstItem="65Z-yB-wtp" firstAttribute="top" secondItem="boF-JJ-lx0" secondAttribute="top" id="fBy-xa-cee"/>
+                <constraint firstItem="boF-JJ-lx0" firstAttribute="bottom" secondItem="lFU-Ht-bOd" secondAttribute="bottom" id="hro-Yn-I2E"/>
+                <constraint firstItem="1ti-6k-vdK" firstAttribute="bottom" secondItem="WX5-69-PdT" secondAttribute="bottom" id="iIi-7Y-nFA"/>
                 <constraint firstItem="uV8-sI-1xq" firstAttribute="width" secondItem="3II-vM-4PB" secondAttribute="width" multiplier="0.14" id="igA-ai-4sj"/>
-                <constraint firstItem="lFU-Ht-bOd" firstAttribute="top" secondItem="Dh2-aX-cu7" secondAttribute="bottom" constant="8" id="igF-aO-G4I"/>
+                <constraint firstItem="R3L-k1-N9o" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="kCc-ac-qpK"/>
                 <constraint firstItem="0He-p7-jS2" firstAttribute="top" secondItem="xgC-eO-nt3" secondAttribute="bottom" constant="8" id="kos-Ze-uRM"/>
                 <constraint firstItem="xgC-eO-nt3" firstAttribute="top" secondItem="3II-vM-4PB" secondAttribute="bottom" constant="8" id="krj-yZ-beC"/>
                 <constraint firstItem="boF-JJ-lx0" firstAttribute="top" secondItem="xgC-eO-nt3" secondAttribute="bottom" constant="8" id="lX0-JL-424"/>
+                <constraint firstItem="lFU-Ht-bOd" firstAttribute="bottom" secondItem="uV8-sI-1xq" secondAttribute="bottom" id="lf2-Ey-KmY"/>
+                <constraint firstItem="lFU-Ht-bOd" firstAttribute="top" secondItem="uV8-sI-1xq" secondAttribute="top" id="obi-R2-6Z4"/>
+                <constraint firstItem="uV8-sI-1xq" firstAttribute="top" secondItem="1ti-6k-vdK" secondAttribute="top" id="qPu-OK-MEg"/>
+                <constraint firstItem="Dh2-aX-cu7" firstAttribute="height" secondItem="R3L-k1-N9o" secondAttribute="height" multiplier="0.2" id="ri2-Se-kwc"/>
                 <constraint firstItem="0He-p7-jS2" firstAttribute="width" secondItem="3II-vM-4PB" secondAttribute="width" multiplier="0.15" id="sVS-d8-bIq"/>
                 <constraint firstItem="lFU-Ht-bOd" firstAttribute="leading" secondItem="uV8-sI-1xq" secondAttribute="trailing" id="wNb-7g-o84"/>
                 <constraint firstItem="3II-vM-4PB" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="24" id="yYZ-vT-18F"/>
